--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,20 @@
 /*
+* imports
+*/
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap');
+
+/*
 * reset & general styles
 */
+html {
+    margin: 0;
+}
+
 body {
     margin: 0;
     background-color: #f0db4f;
     color: #323330;
+    font-family: 'Fira Code', monospace;
 }
 
 a {
@@ -16,21 +26,13 @@ a:hover {
     text-decoration: none;
 }
 
-.text {
-    background-color: #f5f6f7;
-    color: #323330;
-    padding: 10%;
-}
-
-.text a {
-    color: #f0db4f;
-}
 
 /*
 * header & navigation
 */
 header {
     color: #323330;
+    text-align: center;
 }
 
 header a {
@@ -38,13 +40,67 @@ header a {
     text-decoration: none;
 }
 
-header nav a {
-    border-bottom: 1% solid transparent;
-    transition: 0.1s;
+header #wrap {
+    /*
+    position: relative;
+    display: inline-block;
+    margin: 5% auto;
+    text-align: left;
+    */
+    display: flex;
+    justify-content: space-between;
+    max-width: 900px;
+    margin: 25px auto;
+    padding:25px;
 }
 
-header nav a:hover {
-    border-color: #323330;
+header #wrap * {
+    display: inline-block;
+    /*
+    position: absolute;
+    top: 33%;
+    */
+    margin: 0;
+    padding: 0;
+}
+
+header #wrap h1 {
+    /*
+    left: 0;
+    */
+}
+
+header #wrap #socials {
+    /*
+    right: 0;
+    */
+}
+
+header nav {
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+header nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0; 
+    padding: 0;
+}
+
+header nav ul li{
+
+}
+
+header nav ul li a {
+    border-bottom: 3px solid transparent;
+    transition: 0.1s;
+    font-size: 1.3em;
+}
+
+header nav ul li a:hover {
+    border-bottom-color: #323330;
 }
 
 /*
@@ -53,8 +109,33 @@ header nav a:hover {
 main {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    max-width: 900px;
+    margin: 0 auto;
 }
 
+#avatar {
+    margin: 100px 0;
+    border-radius: 360px;
+}
+
+.text {
+    background-color: #f5f6f7;
+    color: #323330;
+    padding: 2em;
+    margin: 100px 0;
+    max-width: 400px;
+    transform: skewY(-7deg);
+}
+
+.text h2, .text h3, .text p {
+    margin: 1em;
+    padding: 0;
+}
+
+.text a {
+    color: #f0db4f;
+}
 /*
 *   footer
 */
