--- a/assets/style.css
+++ b/assets/style.css
@@ -43,6 +43,14 @@ a:hover {
     background-color: #f5f6f7;
 }
 
+.block {
+    display: block;
+}
+
+.none {
+    display: none;
+}
+
 /*
 * header & navigation
 */
@@ -81,6 +89,11 @@ header nav #hamburger {
     margin: 4px;
     padding: 6px;
     border-radius: 4px;
+    transition: 0.3s;
+}
+
+header nav #hamburger:hover {
+    background-color: #f5f6f7;
 }
 
 header nav #hamburger span{
@@ -98,6 +111,7 @@ header nav #socials, header nav ul {
     margin: 0;
     z-index: 2;
     width: 50%;
+    transition: 0.3s;
 }
 
 header nav #socials {
