Menu and page structure now responsive for all pages.

--- a/assets/style.css
+++ b/assets/style.css
@@ -20,6 +20,8 @@ body {
     background-color: #f0db4f;
     color: #323330;
     font-family: 'Fira Code', monospace;
+    position: relative;
+    min-height: 100vh;
 }
 
 a {
@@ -45,6 +47,7 @@ a:hover {
 
 .block {
     display: block;
+    max-width: 300px;
 }
 
 .none {
@@ -57,6 +60,8 @@ a:hover {
 header {
     color: #323330;
     text-align: center;
+    max-width: 900px;
+    margin: 0 auto;
 }
 
 header a {
@@ -85,13 +90,14 @@ header nav #hamburger {
     width: 32px;
     height: 34px;
     margin: 4px;
-    padding: 6px;
+    padding: 1px 3px 2px 3px;
     border-radius: 4px;
-    transition: 0.3s;
+    border: 3px solid rgba(245, 245, 247, 0.4);
+    transition: 0.5s;
 }
 
 header nav #hamburger:hover {
-    background-color: #f5f6f7;
+    border: 3px solid rgba(50, 51, 48, 7);
 }
 
 header nav #hamburger span{
@@ -175,8 +181,9 @@ main {
     display: flex;
     flex-wrap: wrap-reverse;
     justify-content: space-evenly;
-    max-width: 900px;
-    margin: 0 auto;
+    max-width: 700px;
+    margin: 0 auto 0 auto;
+    padding-bottom: 100px;
 }
 
 #avatar, #home .text {
@@ -208,5 +215,47 @@ main {
 *   footer
 */
 footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
 
+footer ul {
+    max-width: 900px;
+    margin: 20px auto;
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 0.8em;
+}
+
+/*
+* responsive styles for larger screens
+*/
+@media (min-width: 830px) { 
+    main {
+        padding-right: 300px;
+        margin-top: 25px;
+    }
+
+    header #hamburger {
+        display: none;
+    }
+
+    .none {
+        display: block;
+        max-width: 300px;
+    }
+}
+
+@media (min-width: 1200px) { 
+    main {
+        padding-right: 300px;
+        max-width: 900px;
+    }
+
+    header nav ul, header nav #socials{
+        left: 70%;
+    }
 }
