--- a/assets/style.css
+++ b/assets/style.css
@@ -166,11 +166,15 @@ header nav ul li a:hover {
 */
 main {
     display: flex;
-    flex-wrap: wrap-reverse;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     max-width: 700px;
     margin: 0 auto 0 auto;
     padding-bottom: 100px;
+}
+
+#home main {
+    flex-wrap: wrap-reverse;
 }
 
 #avatar, #home .text {
@@ -181,8 +185,10 @@ main {
     border-radius: 360px;
 }
 
-#home .text {
+main .text {
     max-width: 400px;
+    min-width: 300px;
+    margin: 25px;
 }
 
 #grid {
