--- a/assets/style.css
+++ b/assets/style.css
@@ -170,7 +170,11 @@ main, #secondary {
     justify-content: space-evenly;
     max-width: 700px;
     margin: 0 auto 0 auto;
-    padding-bottom: 100px;
+    padding-bottom: 75px;
+}
+
+#secondary {
+    padding-bottom: 125px;
 }
 
 #home main {
@@ -185,10 +189,15 @@ main, #secondary {
     border-radius: 360px;
 }
 
-main .text, #secondary .text {
+main .text {
     max-width: 400px;
     min-width: 300px;
     margin: 25px;
+}
+
+#secondary .text {
+    max-width: 400px;
+    margin: 25px 5px;   
 }
 
 #grid {
@@ -257,6 +266,10 @@ footer ul {
         margin-top: 25px;
     }
 
+    #secondary {
+        padding-right: 300px;
+    }
+
     header #hamburger {
         display: none;
     }
@@ -272,10 +285,13 @@ footer ul {
 }
 
 @media (min-width: 1200px) { 
-    main {
-        margin-top: 75px;
+    main, #secondary {
         padding-right: 300px;
         max-width: 900px;
+    }
+
+    main {
+        margin-top: 75px;
     }
 
     header nav ul, header nav #socials {
