--- a/assets/style.css
+++ b/assets/style.css
@@ -242,6 +242,17 @@ table td {
     background-color: #f5f6f7;
 }
 
+form textarea{
+    margin-top: 0;
+    resize: none;
+    width: 100%;
+    height: 10em;
+}
+
+form * {
+    margin: 10px 0;
+}
+
 /*
 *   footer
 */
